[project]
name = "my_commitizen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "commitizen==4.10",
    "pre-commit>=4.5.1",
    "ruff>=0.14.9",
    "ty>=0.0.2",
]

[tool.uv.sources]
my_commitizen = { workspace = true }
